--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://node_3d.tscn", "res://node_366d.tscn")
-current_scene="res://node_366d.tscn"
+open_scenes=PackedStringArray("res://node_3d.tscn")
+current_scene="res://node_3d.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -43,8 +43,8 @@ position=Vector2i(0, 72)
 
 [ScriptEditor]
 
-open_scripts=["res://character_body_3d.gd", "res://test.gd"]
-selected_script="res://test.gd"
+open_scripts=["res://character_body_3d.gd"]
+selected_script="res://character_body_3d.gd"
 open_help=[]
 script_split_offset=400
 list_split_offset=0
